# SmartFusionOS-Mcal

./: README.en.md  README.md
esp32/: CMakeLists.txt  README.md
esp32/esp32_drv/i2c/inc/: i2c_drv.h
esp32/esp32_drv/i2c/src/: i2c_drv.c
esp32/esp32_wrapper/IIC_Wrapper/inc/: iic_wrapper.h
esp32/esp32_wrapper/IIC_Wrapper/src/: iic_wrapper.cc
esp32/esp32_wrapper/i2c_wrapper/inc/: i2c_wrapper.h
esp32/esp32_wrapper/i2c_wrapper/src/: i2c_wrapper.cc
